# InfraLens

./: .replit  package-lock.json  package.json  pyproject.toml
.agents/memory/: MEMORY.md  flutter-replit.md  gemini-setup.md  infralens-auth.md
attached_assets/: Pasted-Part-A-InfraLens-web-console-React-This-is-a-single-Rea_1780688892317.txt  Pasted-Update-the-FastAPI-backend-in-backend-main-py-and-backe_1780692292230.txt  Pasted-You-are-building-InfraLens-a-production-grade-enterpris_1780858943844.txt  Pasted-You-are-building-a-production-grade-Flutter-mobile-app-_1780691556619.txt  Pasted-You-are-upgrading-InfraLens-Flutter-mobile-app-to-a-pro_1780843711080.txt  Pasted-You-are-upgrading-the-InfraLens-React-web-dashboard-fro_1780843642887.txt
devops-monitor/: docker-compose.yml
devops-monitor/.github/workflows/: deploy.yml
devops-monitor/backend/: Dockerfile  ai_service.py  db.py  incident_report.py  main.py  predictor.py  requirements.txt
devops-monitor/flutter_app/: .env  pubspec.yaml
devops-monitor/flutter_app/ios/Runner.xcodeproj/: project.pbxproj
devops-monitor/flutter_app/lib/: alerts_screen.dart  app.dart  app_shell.dart  dashboard_screen.dart  main.dart
devops-monitor/flutter_app/test/: widget_test.dart
devops-monitor/flutter_app/web/: index.html
devops-monitor/infralens-web/infralens-web/: package-lock.json  package.json
devops-monitor/k8s/: backend-deployment.yaml  backend-service.yaml  hpa.yaml  prometheus-configmap.yaml  prometheus-deployment.yaml
devops-monitor/monitoring/: alert_rules.yml  alertmanager.yml  prometheus.yml
(+81 files in other folders)
