[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.111.0",
    "httpx==0.27.0",
    "numpy==1.26.4",
    "pandas==2.2.2",
    "prometheus-client==0.20.0",
    "prophet==1.1.5",
    "psutil==5.9.8",
    "python-dotenv==1.0.0",
    "uvicorn==0.29.0",
    "websockets==12.0",
]
